Add a short title

--- a/docassemble/MAMotiontoVacateMaritalHome/data/questions/Motion to Vacate Marital Home.yml
+++ b/docassemble/MAMotiontoVacateMaritalHome/data/questions/Motion to Vacate Marital Home.yml
@@ -14,6 +14,9 @@ metadata:
 		An interview to ask the court to order the other side in your family law case to leave your home 
 ---
 code: |
+  interview_short_title = "Ask the court to tell someone to leave your home"
+---
+code: |
   allowed_courts = ["Probate and Family Court"]
 ---
 objects:
