Fix #17 - ensure we use ALAddress objects, not plain Address to workaround https://github.com/SuffolkLITLab/docassemble-AssemblyLine/issues/816

--- a/docassemble/MAMotiontoVacateMaritalHome/data/questions/Motion to Vacate Marital Home.yml
+++ b/docassemble/MAMotiontoVacateMaritalHome/data/questions/Motion to Vacate Marital Home.yml
@@ -44,8 +44,8 @@ code: |
   allowed_courts = ["Probate and Family Court"]
 ---
 objects:
-  opposing_counsel: Individual
-  vacate_address: Address
+  opposing_counsel: ALIndividual
+  vacate_address: ALAddress
   docket_number: DAList.using(ask_number=True)
 ---
 comment: |
